
 OpenSSL CHANGES
 _______________

 This is a high-level summary of the most important changes.
 For a full list of changes, see the git commit log; for example,
 https://github.com/openssl/openssl/commits/ and pick the appropriate
 release branch.

 Changes between 1.1.1 and 3.0.0 [xx XXX xxxx]

  *) Revised BN_generate_prime_ex to not avoid factors 2..17863 in p-1
     when primes for RSA keys are computed.
     Since we previously always generated primes == 2 (mod 3) for RSA keys,
     the 2-prime and 3-prime RSA modules were easy to distinguish, since
     N = p*q = 1 (mod 3), but N = p*q*r = 2 (mod 3). Therefore fingerprinting
     2-prime vs. 3-prime RSA keys was possible by computing N mod 3.
     This avoids possible fingerprinting of newly generated RSA modules.
     [Bernd Edlinger]

  *) Correct the extended master secret constant on EBCDIC systems. Without this
     fix TLS connections between an EBCDIC system and a non-EBCDIC system that
     negotiate EMS will fail. Unfortunately this also means that TLS connections
     between EBCDIC systems with this fix, and EBCDIC systems without this
     fix will fail if they negotiate EMS.
     [Matt Caswell]

  *) Changed the library initialisation so that the config file is now loaded
     by default. This was already the case for libssl. It now occurs for both
     libcrypto and libssl. Use the OPENSSL_INIT_NO_LOAD_CONFIG option to
     OPENSSL_init_crypto() to suppress automatic loading of a config file.
     [Matt Caswell]

  *) Introduced new error raising macros, ERR_raise() and ERR_raise_data(),
     where the former acts as a replacement for ERR_put_error(), and the
     latter replaces the combination ERR_put_error()+ERR_add_error_data().
     ERR_raise_data() adds more flexibility by taking a format string and
     an arbitrary number of arguments following it, to be processed with
     BIO_snprintf().
     [Richard Levitte]
